# text_to_speech

./: CMakeLists.txt  package.xml  setup.py  singing_US.txt  tue-manifest.xml
parameters/: text_to_speech.yaml
scripts/: google_tts  play  play.py  player  player.py  text_to_speech_node  text_to_speech_node.py
src/: google_tts.py  sing.py
srv/: Play.srv  Speak.srv
text_to_speech/: CMakeLists.txt  package.xml
text_to_speech/scripts/: google_tts  play  player  text_to_speech_node
text_to_speech/src/text_to_speech/: funcs.py  queued_action_server.py
text_to_speech_msgs/: CMakeLists.txt  package.xml
text_to_speech_msgs/action/: Play.action  Speak.action
text_to_speech_msgs/srv/: GetStatus.srv  Play.srv
