<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>text_to_speech</name>
  <version>0.0.0</version>
  <description>The text_to_speech package</description>

  <maintainer email="j.j.m.lunenburg@tue.nl">Janno Lunenburg</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>festival</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sox</exec_depend>

</package>
