<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>text_to_speech_msgs</name>
  <version>0.0.0</version>
  <description>The text_to_speech package</description>

  <maintainer email="j.j.m.lunenburg@tue.nl">Janno Lunenburg</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
